--- a/ReadyCssWebsite/Properties/launchSettings.json
+++ b/ReadyCssWebsite/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "EntropyWebsite": {
+    "Website": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
