--- a/.github/workflows/test_all.yml
+++ b/.github/workflows/test_all.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Sass Build
         uses: gha-utilities/sass-build@247e848d2ba924ee390e5ddac6c7703ba4f13bcd
         with:
-          source: scss/main.scss
+          source: ReadyCssWebsite/scss/main.scss
           destination: ReadyCssWebsite/wwwroot/css/ready.css
       
       # ======================== .NET ========================
